--- a/ui/main.reel/main.html
+++ b/ui/main.reel/main.html
@@ -33,7 +33,14 @@
 </head>
 <body>
     <div data-montage-id="main" data-montage-skin="light" class="Main">
-        <button data-montage-id="button"></button>
+        <button data-montage-id="button" id="btn"></button>
     </div>
+    $(#btn).on("click",function()                               
+    {
+    alert('hi');
+    
+    });
+
+    </script
 </body>
 </html>
