--- a/ui/main.reel/main.html
+++ b/ui/main.reel/main.html
@@ -35,12 +35,13 @@
     <div data-montage-id="main" data-montage-skin="light" class="Main">
         <button data-montage-id="button" id="btn"></button>
     </div>
+    <script>
     $(#btn).on("click",function()                               
     {
     alert('hi');
     
     });
 
-    </script
+    </script>
 </body>
 </html>
